welcome.lessons.welcome.bat.bool1.SleepIn.scala.error
sleepIn:2: error: value =! is not a member of Boolean
	if(weekday=!true){
                  ^sleepIn:5: error: type mismatch;
 found   : Unit
 required: Boolean
	if(vacation==true){
        ^